# CampingTrip

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  LICENSE  Makefile  PLAN.md  README.md  TODO.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts  vitest.config.ts
.claude/skills/: new-site.md
.github/workflows/: ci.yml  deploy.yml  terraform.yml  (+1 more)
backend/: .dockerignore  .env.example  Dockerfile  README.md  conftest.py  docker-compose.prod.yml  docker-compose.yml  manage.py  pyproject.toml
backend/apps/core/: admin.py  dev_auth_urls.py  models.py  serializers.py  urls.py  views.py
backend/apps/core/migrations/: 0001_initial.py
backend/apps/example_app/: admin.py  apps.py  models.py  serializers.py  tasks.py  urls.py  views.py
backend/apps/example_app/migrations/: 0001_initial.py
backend/apps/photobroom/: apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/workout/: admin.py  apps.py  models.py  progression.py  serializers.py  set_generation.py  signals.py  tests.py  urls.py  views.py  warmups.py
backend/apps/workout/management/commands/: seed_default_ladders.py
backend/apps/workout/migrations/: 0001_initial.py  0002_musclegroup_sessionexercise_is_warmup_and_more.py  0003_add_warmup_sets_and_working_weight.py
backend/campsite/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
docs/: architecture.md
infra/: Caddyfile  cloudwatch.tf  ec2.tf  ecr.tf  iam.tf  main.tf  outputs.tf  rds.tf  route53.tf  s3.tf  secrets.tf  security_groups.tf  ssm.tf  variables.tf  vpc.tf
public/: CNAME
src/: App.tsx  mobileInput.ts
(+226 files in other folders)
